--- a/root/index.html
+++ b/root/index.html
@@ -143,12 +143,12 @@
               <div class="owl-carousel owl-theme">
                 <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387.jpg" src="assets/images/794A5387.jpg" alt=""></div>
                 <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387_z0.jpg" src="assets/images/794A5387_z0.jpg" alt=""></div>
-                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5186-min.jpg" src="assets/images/794A5186-min.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/user01.jpg" src="assets/images/user01.jpg" alt=""></div>
                 <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg" src="assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg" alt=""></div>
                 <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/IMG_8459-Edit-Edit-1-min.jpg" src="assets/images/IMG_8459-Edit-Edit-1-min.jpg" alt=""></div>
                 <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387.jpg" src="assets/images/794A5387.jpg" alt=""></div>
                 <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387_z0.jpg" src="assets/images/794A5387_z0.jpg" alt=""></div>
-                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5186-min.jpg" src="assets/images/794A5186-min.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/user01.jpg" src="assets/images/user01.jpg" alt=""></div>
                 <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg" src="assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg" alt=""></div>
                 <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/IMG_8459-Edit-Edit-1-min.jpg" src="assets/images/IMG_8459-Edit-Edit-1-min.jpg" alt=""></div>
               </div>
