--- a/root/about/index.html
+++ b/root/about/index.html
@@ -7,7 +7,7 @@
     <title>ABOUT</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/style.css">
   </head>
   <body>
@@ -17,13 +17,13 @@
           <h1 class="c-header__logo"><a class="logo-image" href="..//"><img src="../assets/images/logo.png" alt="logo alt"></a></h1>
           <nav>
             <ul class="nav-menu">
-              <li class="nav-menu_item is_active"><a href="#">Home</a></li>
-              <li class="nav-menu_item"><a href="..//news/">Instant Quotes</a></li>
-              <li class="nav-menu_item"><a href="#">Blog</a></li>
-              <li class="nav-menu_item"><a href="#">About</a></li>
-              <li class="nav-menu_item"><a href="#">Contact</a></li>
+              <li class="nav-menu_item is_active"><a href="https://preciouslifeagent.com/">Home</a></li>
+              <li class="nav-menu_item"><a href="https://preciouslifeagent.com/instant-life-insurance-quotes/">Instant Quotes</a></li>
+              <li class="nav-menu_item"><a href="https://preciouslifeagent.com/blog/">Blog</a></li>
+              <li class="nav-menu_item"><a href="https://preciouslifeagent.com/about/">About</a></li>
+              <li class="nav-menu_item"><a href="https://preciouslifeagent.com/contact/">Contact</a></li>
               <li class="nav-menu_item nav-menu_item__phone"><a href="tel:713-985-9944">713-985-9944</a></li>
-              <li class="nav-menu_item nav-menu_item__phone not-before"><a href="tel:713-985-9944">Nhận Tư vấn</a></li>
+              <li class="nav-menu_item nav-menu_item__phone not-before"><a href="tel:713-985-9944">Let's talk</a></li>
             </ul>
             <div class="nav-menu_mobile" onclick="toggleMenu()">
               <svg id="open" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
