--- a/root/index.html
+++ b/root/index.html
@@ -7,7 +7,7 @@
     <title>Top</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
@@ -20,13 +20,13 @@
           <h1 class="c-header__logo"><a class="logo-image" href="/"><img src="assets/images/logo.png" alt="logo alt"></a></h1>
           <nav>
             <ul class="nav-menu">
-              <li class="nav-menu_item is_active"><a href="#">Home</a></li>
-              <li class="nav-menu_item"><a href="/news/">Instant Quotes</a></li>
-              <li class="nav-menu_item"><a href="#">Blog</a></li>
-              <li class="nav-menu_item"><a href="#">About</a></li>
-              <li class="nav-menu_item"><a href="#">Contact</a></li>
+              <li class="nav-menu_item is_active"><a href="https://preciouslifeagent.com/">Home</a></li>
+              <li class="nav-menu_item"><a href="https://preciouslifeagent.com/instant-life-insurance-quotes/">Instant Quotes</a></li>
+              <li class="nav-menu_item"><a href="https://preciouslifeagent.com/blog/">Blog</a></li>
+              <li class="nav-menu_item"><a href="https://preciouslifeagent.com/about/">About</a></li>
+              <li class="nav-menu_item"><a href="https://preciouslifeagent.com/contact/">Contact</a></li>
               <li class="nav-menu_item nav-menu_item__phone"><a href="tel:713-985-9944">713-985-9944</a></li>
-              <li class="nav-menu_item nav-menu_item__phone not-before"><a href="tel:713-985-9944">Nhận Tư vấn</a></li>
+              <li class="nav-menu_item nav-menu_item__phone not-before"><a href="tel:713-985-9944">Let's talk</a></li>
             </ul>
             <div class="nav-menu_mobile" onclick="toggleMenu()">
               <svg id="open" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -77,12 +77,18 @@
         <div class="l-container">
           <div class="c-message">
             <div class="c-message_inner">
-              <p>WE MAKE MONEY <br> WORK IN YOUR FAVOR</p>
+              <p>WE MAKE MONEY <br> WORK IN YOUR FAVOR   </p>
             </div>
           </div>
-          <div class="c-solution">
+        </div>
+        <div class="c-solution">
+          <div class="l-container">
             <div class="c-solution_inner">
               <h3>Insurance Solutions</h3>
+              <div class="content">
+                <p>HubSpot’s CRM platform has all the tools and integrations you need for marketing, sales, content management, and customer service. Each product in the platform is powerful alone, but the real magic happens when you use them together.</p>
+                <div class="btn"><a href>Get free CRM</a><a href>Demo premium CRM</a></div>
+              </div>
               <ul>
                 <li>
                   <div class="c-solution_name">Tax Planning</div>
@@ -102,9 +108,11 @@
               </ul>
             </div>
           </div>
-          <div class="c-button"><a class="c-button_inner bounceIn" href="https://api.leadconnectorhq.com/widget/appointment/preciouslifeagent/retirement-consultation" target="_blank">
-              <p>Bạn có muốn làm chủ tương lai?</p>
-              <p>Đừng ngần ngại tìm hiểu cùng Jolie!</p></a></div>
+        </div>
+        <div class="c-button"><a class="c-button_inner bounceIn" href="https://api.leadconnectorhq.com/widget/appointment/preciouslifeagent/retirement-consultation" target="_blank">
+            <p>Bạn có muốn làm chủ tương lai?</p>
+            <p>Đừng ngần ngại tìm hiểu cùng Jolie!</p></a></div>
+        <div class="l-container">     
           <div class="c-trust">
             <h3>There are 1000+ customers who have chosen to accompany Jolie, because:</h3>
             <p> Put customers first, choose the types of insurance and financial funds that fit your budget and help you achieve maximum benefits in the future.</p>
@@ -136,7 +144,7 @@
             <div class="c-boss_img"><img class="lazyload" loading="lazy" data-src="assets/images/jolie-phan0.jpg" src="assets/images/jolie-phan0.jpg" alt=""></div>
             <div class="c-boss_content">
               <h3>About JOLIE PHAN</h3>
-              <p>JOLIE PHAN, a life insurance associate of Independent Alliance Agency, had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no different. It is all about serving people and giving every American family a better life.</p>
+              <p>JOLIE PHAN, a life insurance associate of Independent Alliance Agency, had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no different. It is all about serving people and giving every American family a better life.</p><br>
               <p>With a substantial amount of knowledge in structuring a policy, backed by an excellent support team, Jolie is committed to help every family to have a comprehensive understanding of the benefits of tax free retirement</p>
             </div>
             <div class="swiper-user">
@@ -154,8 +162,42 @@
               </div>
             </div>
           </div>
-          <div class="c-video">
+          <div class="c-user">
             <h3>What our customers say about us</h3>
+            <div class="owl-carousel owl-theme">
+              <div class="c-user_item">
+                <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/PXL_20210316_011135625.jpg" src="assets/images/PXL_20210316_011135625.jpg" alt=""></div>
+                <h4>Lan Nguyen</h4>
+                <p> Jolie helped me get the best insurance profile ever. She is always friendly and very reliable.</p>
+              </div>
+              <div class="c-user_item">
+                <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/dr-terry-truong.jpg" src="assets/images/dr-terry-truong.jpg" alt=""></div>
+                <h4>DR Terry Trương</h4>
+                <p> Thanks to my aunt's introduction, I got to know Jolie and was supported by her retirement insurance. I am very satisfied with Jolie's service.</p>
+              </div>
+              <div class="c-user_item">
+                <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/beauty_20210518144219.jpg" src="assets/images/beauty_20210518144219.jpg" alt=""></div>
+                <h4>Trinh Nguyen</h4>
+                <p> I do nails so I am very worried about my health and future. So I reached out to Jolie for advice on a retirement plan. She helped me a lot and gave me the best retirement package. Sincere thanks to Jolie and team</p>
+              </div>
+              <div class="c-user_item">
+                <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/PXL_20210316_011135625.jpg" src="assets/images/PXL_20210316_011135625.jpg" alt=""></div>
+                <h4>Lan Nguyen</h4>
+                <p> Jolie helped me get the best insurance profile ever. She is always friendly and very reliable.</p>
+              </div>
+              <div class="c-user_item">
+                <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/dr-terry-truong.jpg" src="assets/images/dr-terry-truong.jpg" alt=""></div>
+                <h4>DR Terry Trương</h4>
+                <p> Thanks to my aunt's introduction, I got to know Jolie and was supported by her retirement insurance. I am very satisfied with Jolie's service.</p>
+              </div>
+              <div class="c-user_item">
+                <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/beauty_20210518144219.jpg" src="assets/images/beauty_20210518144219.jpg" alt=""></div>
+                <h4>Trinh Nguyen</h4>
+                <p> I do nails so I am very worried about my health and future. So I reached out to Jolie for advice on a retirement plan. She helped me a lot and gave me the best retirement package. Sincere thanks to Jolie and team</p>
+              </div>
+            </div>
+          </div>
+          <div class="c-video">
             <ul>
               <li>
                 <iframe class="lazyload" loading="lazy" src="https://www.youtube.com/embed/Sp7MkwNVWPE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
@@ -165,26 +207,10 @@
               </li>
             </ul>
           </div>
-          <div class="c-user">
-            <div class="c-user_inner">
-              <div class="c-user_list user-slider">
-                <div class="c-user_item">
-                  <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/PXL_20210316_011135625.jpg" src="assets/images/PXL_20210316_011135625.jpg" alt=""></div>
-                  <h4>Lan Nguyen</h4>
-                  <p> Jolie helped me get the best insurance profile ever. She is always friendly and very reliable.</p>
-                </div>
-                <div class="c-user_item">
-                  <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/dr-terry-truong.jpg" src="assets/images/dr-terry-truong.jpg" alt=""></div>
-                  <h4>DR Terry Trương</h4>
-                  <p> Thanks to my aunt's introduction, I got to know Jolie and was supported by her retirement insurance. I am very satisfied with Jolie's service.</p>
-                </div>
-                <div class="c-user_item">
-                  <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/beauty_20210518144219.jpg" src="assets/images/beauty_20210518144219.jpg" alt=""></div>
-                  <h4>Trinh Nguyen</h4>
-                  <p> I do nails so I am very worried about my health and future. So I reached out to Jolie for advice on a retirement plan. She helped me a lot and gave me the best retirement package. Sincere thanks to Jolie and team</p>
-                </div>
-              </div>
-            </div>
+        </div>
+        <div class="c-quoue">
+          <div class="l-container">
+            <h3>Contact us for professional financial advice</h3><a href>Request a Quote</a>
           </div>
         </div>
       </main>
@@ -223,11 +249,14 @@
           prevEl: ".swiper-button-prev"
         }
       });
-      $('.owl-carousel').owlCarousel({
+      $('.swiper-user .owl-carousel').owlCarousel({
       loop:true,
       margin: 20,
       nav: true,
+      dot:true,
       lazyLoad:true,
+      autoplay:true,
+      autoplayTimeout:3000,
       navText: ["<img src='../../assets/images/back.png'>","<img src='../../assets/images/next.png'>"],
       responsive:{
           0:{
@@ -235,6 +264,22 @@
           },
           768:{
               items:4
+          }
+      }
+      });
+      $('.c-user .owl-carousel').owlCarousel({
+      loop:true,
+      margin: 20,
+      dots: true,
+      lazyLoad:true,
+      autoplay:true,
+      autoplayTimeout:3000,
+      responsive:{
+          0:{
+              items:1
+          },
+          768:{
+              items:3
           }
       }
       });
