--- a/root/index.html
+++ b/root/index.html
@@ -75,9 +75,11 @@
           </div>
         </div>
         <div class="l-container">
-          <div class="c-message">
-            <div class="c-message_inner">
-              <p>WE MAKE MONEY <br> WORK IN YOUR FAVOR   </p>
+          <div class="c-boss">
+            <div class="c-boss_img"><img class="lazyload" loading="lazy" data-src="assets/images/user02.jpg" src="assets/images/user02.jpg" alt=""></div>
+            <div class="c-boss_content">
+              <h3 class="m-center m-position">Our Mission</h3>
+              <p>There's this notion that to grow a business, you have to be ruthless. But we know there's a better way to grow. One where what's good for the bottom line is also good for customers. We believe businesses can grow with a conscience, and succeed with a soul — and that they can do it with inbound. That's why we've created an ecosystem uniting software, education, and community to help businesses grow better every day. </p>
             </div>
           </div>
         </div>
@@ -112,98 +114,43 @@
         <div class="c-button"><a class="c-button_inner bounceIn" href="https://api.leadconnectorhq.com/widget/appointment/preciouslifeagent/retirement-consultation" target="_blank">
             <p>Bạn có muốn làm chủ tương lai?</p>
             <p>Đừng ngần ngại tìm hiểu cùng Jolie!</p></a></div>
-        <div class="l-container">     
-          <div class="c-trust">
-            <h3>There are 1000+ customers who have chosen to accompany Jolie, because:</h3>
-            <p> Put customers first, choose the types of insurance and financial funds that fit your budget and help you achieve maximum benefits in the future.</p>
-            <ul>
-              <li>
-                <div class="c-trust_icon"><img class="lazyload" loading="lazy" data-src="assets/images/shield.png" src="assets/images/shield.png"></div>
-                <h3>Trusted Partners</h3>
+        <div class="c-customers">
+          <div class="l-container"> 
+            <div class="c-customers_inner">
+              <dl> 
+                <dd> 
+                  <h3>There are 1000+ customers who have chosen to accompany Jolie, because:</h3>
+                  <p> Put customers first, choose the types of insurance and financial funds that fit your budget and help you achieve maximum benefits in the future.  </p>
+                </dd>
+              </dl>
+              <dl> 
+                <dd> <img class="lazyload" loading="lazy" data-src="assets/images/user02.jpg" src="assets/images/user02.jpg" alt=""></dd>
+              </dl>
+            </div>
+            <ul class="c-customers_list">
+              <li>  
+                <div class="c-customers_ttl"> <img class="lazyload" loading="lazy" data-src="assets/images/shield.png" src="assets/images/shield.png">
+                  <h3>Trusted Partners</h3>
+                </div>
                 <p>Jolie's agent and team contract with many reputable financial companies in the market to bring you the best products</p>
               </li>
               <li>
-                <div class="c-trust_icon"><img class="lazyload" loading="lazy" data-src="assets/images/customer-service.png" src="assets/images/customer-service.png"></div>
-                <h3>#1 Customer Service</h3>
+                <div class="c-customers_ttl"> <img class="lazyload" loading="lazy" data-src="assets/images/customer-service.png" src="assets/images/customer-service.png">
+                  <h3>#1 Customer Service</h3>
+                </div>
                 <p>Jolie has always had the ideal of giving and serving, so Jolie always strives to bring satisfaction and the best experience to customers from the first time they meet.</p>
               </li>
               <li>
-                <div class="c-trust_icon"><img class="lazyload" loading="lazy" data-src="assets/images/badge.png" src="assets/images/badge.png"></div>
-                <h3>Professional</h3>
+                <div class="c-customers_ttl"> <img class="lazyload" loading="lazy" data-src="assets/images/badge.png" src="assets/images/badge.png">
+                  <h3>Professional</h3>
+                </div>
                 <p>Professional process and a team of rich professionals are always ready to advise and support customers on any insurance-related issues.</p>
               </li>
               <li>
-                <div class="c-trust_icon"><img class="lazyload" loading="lazy" data-src="assets/images/best-seller.png" src="assets/images/best-seller.png"></div>
-                <h3>Best Offer</h3>
-                <p>
-                  Thoroughly learn about the wishes and capabilities of the customer to come up with the most suitable and optimal financial fund for the customer's needs.To enable screen reader support, press Ctrl+Alt+Z To learn about keyboard shortcuts, press Ctrl+slash</p>
-              </li>
-            </ul>
-          </div>
-          <div class="c-boss">
-            <div class="c-boss_img"><img class="lazyload" loading="lazy" data-src="assets/images/jolie-phan0.jpg" src="assets/images/jolie-phan0.jpg" alt=""></div>
-            <div class="c-boss_content">
-              <h3>About JOLIE PHAN</h3>
-              <p>JOLIE PHAN, a life insurance associate of Independent Alliance Agency, had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no different. It is all about serving people and giving every American family a better life.</p><br>
-              <p>With a substantial amount of knowledge in structuring a policy, backed by an excellent support team, Jolie is committed to help every family to have a comprehensive understanding of the benefits of tax free retirement</p>
-            </div>
-            <div class="swiper-user">
-              <div class="owl-carousel owl-theme">
-                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387.jpg" src="assets/images/794A5387.jpg" alt=""></div>
-                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387_z0.jpg" src="assets/images/794A5387_z0.jpg" alt=""></div>
-                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/user01.jpg" src="assets/images/user01.jpg" alt=""></div>
-                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg" src="assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg" alt=""></div>
-                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/IMG_8459-Edit-Edit-1-min.jpg" src="assets/images/IMG_8459-Edit-Edit-1-min.jpg" alt=""></div>
-                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387.jpg" src="assets/images/794A5387.jpg" alt=""></div>
-                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387_z0.jpg" src="assets/images/794A5387_z0.jpg" alt=""></div>
-                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/user01.jpg" src="assets/images/user01.jpg" alt=""></div>
-                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg" src="assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg" alt=""></div>
-                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/IMG_8459-Edit-Edit-1-min.jpg" src="assets/images/IMG_8459-Edit-Edit-1-min.jpg" alt=""></div>
-              </div>
-            </div>
-          </div>
-          <div class="c-user">
-            <h3>What our customers say about us</h3>
-            <div class="owl-carousel owl-theme">
-              <div class="c-user_item">
-                <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/PXL_20210316_011135625.jpg" src="assets/images/PXL_20210316_011135625.jpg" alt=""></div>
-                <h4>Lan Nguyen</h4>
-                <p> Jolie helped me get the best insurance profile ever. She is always friendly and very reliable.</p>
-              </div>
-              <div class="c-user_item">
-                <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/dr-terry-truong.jpg" src="assets/images/dr-terry-truong.jpg" alt=""></div>
-                <h4>DR Terry Trương</h4>
-                <p> Thanks to my aunt's introduction, I got to know Jolie and was supported by her retirement insurance. I am very satisfied with Jolie's service.</p>
-              </div>
-              <div class="c-user_item">
-                <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/beauty_20210518144219.jpg" src="assets/images/beauty_20210518144219.jpg" alt=""></div>
-                <h4>Trinh Nguyen</h4>
-                <p> I do nails so I am very worried about my health and future. So I reached out to Jolie for advice on a retirement plan. She helped me a lot and gave me the best retirement package. Sincere thanks to Jolie and team</p>
-              </div>
-              <div class="c-user_item">
-                <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/PXL_20210316_011135625.jpg" src="assets/images/PXL_20210316_011135625.jpg" alt=""></div>
-                <h4>Lan Nguyen</h4>
-                <p> Jolie helped me get the best insurance profile ever. She is always friendly and very reliable.</p>
-              </div>
-              <div class="c-user_item">
-                <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/dr-terry-truong.jpg" src="assets/images/dr-terry-truong.jpg" alt=""></div>
-                <h4>DR Terry Trương</h4>
-                <p> Thanks to my aunt's introduction, I got to know Jolie and was supported by her retirement insurance. I am very satisfied with Jolie's service.</p>
-              </div>
-              <div class="c-user_item">
-                <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/beauty_20210518144219.jpg" src="assets/images/beauty_20210518144219.jpg" alt=""></div>
-                <h4>Trinh Nguyen</h4>
-                <p> I do nails so I am very worried about my health and future. So I reached out to Jolie for advice on a retirement plan. She helped me a lot and gave me the best retirement package. Sincere thanks to Jolie and team</p>
-              </div>
-            </div>
-          </div>
-          <div class="c-video">
-            <ul>
-              <li>
-                <iframe class="lazyload" loading="lazy" src="https://www.youtube.com/embed/Sp7MkwNVWPE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-              </li>
-              <li>
-                <iframe class="lazyload" loading="lazy" src="https://www.youtube.com/embed/flGKab64l9M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+                <div class="c-customers_ttl"> <img class="lazyload" loading="lazy" data-src="assets/images/best-seller.png" src="assets/images/best-seller.png">
+                  <h3>Best Offer</h3>
+                </div>
+                <p>Thoroughly learn about the wishes and capabilities of the customer to come up with the most suitable and optimal financial fund for the customer's needs. To enable screen reader support, press Ctrl+Alt+Z To learn about keyboard shortcuts, press Ctrl+slash  </p>
               </li>
             </ul>
           </div>
