--- a/root/index.html
+++ b/root/index.html
@@ -79,7 +79,7 @@
             <div class="c-boss_img"><img class="lazyload" loading="lazy" data-src="assets/images/user02.jpg" src="assets/images/user02.jpg" alt=""></div>
             <div class="c-boss_content">
               <h3 class="m-center m-position">Our Mission</h3>
-              <p>There's this notion that to grow a business, you have to be ruthless. But we know there's a better way to grow. One where what's good for the bottom line is also good for customers. We believe businesses can grow with a conscience, and succeed with a soul — and that they can do it with inbound. That's why we've created an ecosystem uniting software, education, and community to help businesses grow better every day. </p>
+              <p>There's this notion that to grow a business, you have to be ruthless. But we know there's a better way to grow. One where what's good for the bottom line is also good for customers. We believe businesses can grow with a conscience, and succeed with a soul — and that they can do it with inbound. That's why we've created an ecosystem uniting software, education, and community to help businesses grow better every day.</p>
             </div>
           </div>
         </div>
@@ -115,42 +115,42 @@
             <p>Bạn có muốn làm chủ tương lai?</p>
             <p>Đừng ngần ngại tìm hiểu cùng Jolie!</p></a></div>
         <div class="c-customers">
-          <div class="l-container"> 
+          <div class="l-container">
             <div class="c-customers_inner">
-              <dl> 
-                <dd> 
+              <dl>
+                <dd>
                   <h3>There are 1000+ customers who have chosen to accompany Jolie, because:</h3>
-                  <p> Put customers first, choose the types of insurance and financial funds that fit your budget and help you achieve maximum benefits in the future.  </p>
+                  <p> Put customers first, choose the types of insurance and financial funds that fit your budget and help you achieve maximum benefits in the future.</p>
                 </dd>
               </dl>
-              <dl> 
-                <dd> <img class="lazyload" loading="lazy" data-src="assets/images/user02.jpg" src="assets/images/user02.jpg" alt=""></dd>
+              <dl>
+                <dd><img class="lazyload" loading="lazy" data-src="assets/images/user02.jpg" src="assets/images/user02.jpg" alt=""></dd>
               </dl>
             </div>
             <ul class="c-customers_list">
-              <li>  
-                <div class="c-customers_ttl"> <img class="lazyload" loading="lazy" data-src="assets/images/shield.png" src="assets/images/shield.png">
+              <li>
+                <div class="c-customers_ttl"><img class="lazyload" loading="lazy" data-src="assets/images/shield.png" src="assets/images/shield.png">
                   <h3>Trusted Partners</h3>
                 </div>
-                <p>Jolie's agent and team contract with many reputable financial companies in the market to bring you the best products</p>
+                <p>Jolie's agent and team contract with many reputable financial companies in the market to bring you the best products</p><a href>Sự khác biệt cơ bản của người trưởng thành so với lứa tuổi mới lớn, theo ông, là ở đâu, nếu không chỉ là cách yêu?</a>
               </li>
               <li>
-                <div class="c-customers_ttl"> <img class="lazyload" loading="lazy" data-src="assets/images/customer-service.png" src="assets/images/customer-service.png">
+                <div class="c-customers_ttl"><img class="lazyload" loading="lazy" data-src="assets/images/customer-service.png" src="assets/images/customer-service.png">
                   <h3>#1 Customer Service</h3>
                 </div>
-                <p>Jolie has always had the ideal of giving and serving, so Jolie always strives to bring satisfaction and the best experience to customers from the first time they meet.</p>
+                <p>Jolie has always had the ideal of giving and serving, so Jolie always strives to bring satisfaction and the best experience to customers from the first time they meet.</p><a href>Sự khác biệt cơ bản của người trưởng thành so với lứa tuổi mới lớn, theo ông, là ở đâu, nếu không chỉ là cách yêu?</a>
               </li>
               <li>
-                <div class="c-customers_ttl"> <img class="lazyload" loading="lazy" data-src="assets/images/badge.png" src="assets/images/badge.png">
+                <div class="c-customers_ttl"><img class="lazyload" loading="lazy" data-src="assets/images/badge.png" src="assets/images/badge.png">
                   <h3>Professional</h3>
                 </div>
-                <p>Professional process and a team of rich professionals are always ready to advise and support customers on any insurance-related issues.</p>
+                <p>Professional process and a team of rich professionals are always ready to advise and support customers on any insurance-related issues.</p><a href>Sự khác biệt cơ bản của người trưởng thành so với lứa tuổi mới lớn, theo ông, là ở đâu, nếu không chỉ là cách yêu?</a>
               </li>
               <li>
-                <div class="c-customers_ttl"> <img class="lazyload" loading="lazy" data-src="assets/images/best-seller.png" src="assets/images/best-seller.png">
+                <div class="c-customers_ttl"><img class="lazyload" loading="lazy" data-src="assets/images/best-seller.png" src="assets/images/best-seller.png">
                   <h3>Best Offer</h3>
                 </div>
-                <p>Thoroughly learn about the wishes and capabilities of the customer to come up with the most suitable and optimal financial fund for the customer's needs. To enable screen reader support, press Ctrl+Alt+Z To learn about keyboard shortcuts, press Ctrl+slash  </p>
+                <p>Thoroughly learn about the wishes and capabilities of the customer to come up with the most suitable and optimal financial fund for the customer's needs. To enable screen reader support, press Ctrl+Alt+Z To learn about keyboard shortcuts, press Ctrl+slash</p><a href>Sự khác biệt cơ bản của người trưởng thành so với lứa tuổi mới lớn, theo ông, là ở đâu, nếu không chỉ là cách yêu?</a>
               </li>
             </ul>
           </div>
