--- a/root/index.html
+++ b/root/index.html
@@ -154,6 +154,75 @@
               </li>
             </ul>
           </div>
+          <div class="c-boss">
+            <div class="c-boss_img"><img class="lazyload" loading="lazy" data-src="assets/images/jolie-phan0.jpg" src="assets/images/jolie-phan0.jpg" alt=""></div>
+            <div class="c-boss_content">
+              <h3>About JOLIE PHAN</h3>
+              <p>JOLIE PHAN, a life insurance associate of Independent Alliance Agency, had worked in the healthcare field for over a decade. Organized and joined many international mission trips including to Syrian refugee’s camp in 2017, Jolie’s passion has always been about serving others. Her attitude toward life insurance industry is no different. It is all about serving people and giving every American family a better life.</p><br>
+              <p>With a substantial amount of knowledge in structuring a policy, backed by an excellent support team, Jolie is committed to help every family to have a comprehensive understanding of the benefits of tax free retirement</p>
+            </div>
+            <div class="swiper-user">
+              <div class="owl-carousel owl-theme">
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387.jpg" src="assets/images/794A5387.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387_z0.jpg" src="assets/images/794A5387_z0.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/user01.jpg" src="assets/images/user01.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg" src="assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/IMG_8459-Edit-Edit-1-min.jpg" src="assets/images/IMG_8459-Edit-Edit-1-min.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387.jpg" src="assets/images/794A5387.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/794A5387_z0.jpg" src="assets/images/794A5387_z0.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/user01.jpg" src="assets/images/user01.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg" src="assets/images/IMG_8371-Edit-Edit-Edit-2-Edit-1-2-min.jpg" alt=""></div>
+                <div class="item"><img class="lazyload owl-lazy" loading="lazy" data-src="assets/images/IMG_8459-Edit-Edit-1-min.jpg" src="assets/images/IMG_8459-Edit-Edit-1-min.jpg" alt=""></div>
+              </div>
+            </div>
+          </div>
+          <div class="c-user">
+            <h3>What our customers say about us</h3>
+            <div class="owl-carousel owl-theme">
+              <div class="c-user_item">
+                <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/PXL_20210316_011135625.jpg" src="assets/images/PXL_20210316_011135625.jpg" alt=""></div>
+                <h4>Lan Nguyen</h4>
+                <p> Jolie helped me get the best insurance profile ever. She is always friendly and very reliable.</p>
+              </div>
+              <div class="c-user_item">
+                <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/dr-terry-truong.jpg" src="assets/images/dr-terry-truong.jpg" alt=""></div>
+                <h4>Dr. Terry Truong</h4>
+                <p> Thanks to my aunt's introduction, I got to know Jolie and was supported by her retirement insurance. I am very satisfied with Jolie's service.</p>
+              </div>
+              <div class="c-user_item">
+                <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/beauty_20210518144219.jpg" src="assets/images/beauty_20210518144219.jpg" alt=""></div>
+                <h4>Trinh Nguyen</h4>
+                <p> I do nails so I am very worried about my health and future. So I reached out to Jolie for advice on a retirement plan. She helped me a lot and gave me the best retirement package. Sincere thanks to Jolie and team</p>
+              </div>
+              <div class="c-user_item">
+                <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/PXL_20210316_011135625.jpg" src="assets/images/PXL_20210316_011135625.jpg" alt=""></div>
+                <h4>Lan Nguyen</h4>
+                <p> Jolie helped me get the best insurance profile ever. She is always friendly and very reliable.</p>
+              </div>
+              <div class="c-user_item">
+                <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/dr-terry-truong.jpg" src="assets/images/dr-terry-truong.jpg" alt=""></div>
+                <h4>Dr. Terry Truong</h4>
+                <p> Thanks to my aunt's introduction, I got to know Jolie and was supported by her retirement insurance. I am very satisfied with Jolie's service.</p>
+              </div>
+              <div class="c-user_item">
+                <div class="c-user_img"><img class="lazyload" loading="lazy" data-src="assets/images/beauty_20210518144219.jpg" src="assets/images/beauty_20210518144219.jpg" alt=""></div>
+                <h4>Trinh Nguyen</h4>
+                <p> I do nails so I am very worried about my health and future. So I reached out to Jolie for advice on a retirement plan. She helped me a lot and gave me the best retirement package. Sincere thanks to Jolie and team</p>
+              </div>
+            </div>
+          </div>
+          <div class="c-video">
+            <ul>
+              <li>
+                <iframe class="lazyload" loading="lazy" src="https://www.youtube.com/embed/Sp7MkwNVWPE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+                <p>Trinh Nguyen -  Math Teacher at Fort Bend County</p>
+              </li>
+              <li>
+                <iframe class="lazyload" loading="lazy" src="https://www.youtube.com/embed/flGKab64l9M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+                <p>Dr. Hieu Do - Dentist Owner at Total Wellness Dental</p>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="c-quoue">
           <div class="l-container">
